--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -1,5 +1,5 @@
 // tick element variables
-$box-size: 1rem;
+$form-tick-box-size: 1rem;
 
 // Offsets to align tick elements to the baseline of headings.
 $box-offsets-top: (
@@ -18,40 +18,53 @@ $box-offsets-top: (
   table-header: 1.9,
 ) !default;
 
-@mixin vf-b-tick-elements {
-  // Default form checkbox and radio styles
-  %vf-tick-elements {
+@mixin vf-b-tick-elements-definitions {
+  %vf-hidden-tick-input {
+    bottom: 0;
+    height: $form-tick-box-size;
+    float: none;
+    margin: 0;
     opacity: 0;
     position: absolute;
+    width: $form-tick-box-size;
+  }
 
-    label & {
-      // some basic styling for checkboxes inside labels
-      float: left;
-      margin: $spv-inner--x-small $sph-inner 0 0;
-      opacity: 1;
-      position: static;
+  %vf-pseudo-tick-box {
+    &::before,
+    &::after {
+      $properties: #{background-color, border-color};
+      @include vf-animation($properties);
+
+      position: absolute;
     }
 
+    // container
+    &::before {
+      content: '';
+      height: $form-tick-box-size;
+      left: 0;
+      outline-offset: 1px;
+      width: $form-tick-box-size;
+    }
+
+    // tick/circle
+    &::after {
+      content: '';
+      opacity: 0;
+    }
+  }
+}
+
+@mixin vf-b-tick-elements {
+  @include vf-b-tick-elements-definitions;
+
+  // Default form checkbox and radio styles
+  %vf-tick-elements {
     & + label {
-      padding-left: $sph-inner + $box-size;
+      @extend %vf-pseudo-tick-box;
+
+      padding-left: $sph-inner + $form-tick-box-size;
       position: relative;
-
-      &::before,
-      &::after {
-        $properties: #{background-color, border-color};
-        @include vf-animation($properties);
-
-        position: absolute;
-      }
-
-      // container
-      &::before {
-        content: '';
-        height: $box-size;
-        left: 0;
-        outline-offset: 1px;
-        width: $box-size;
-      }
 
       // Align with different text styles
       @media (max-width: $breakpoint-heading-threshold) {
@@ -61,39 +74,39 @@ $box-offsets-top: (
         &:not(.is-h4)::before,
         &:not(.is-muted-heading)::before,
         &:not(.is-inline-label)::before {
-          top: #{$sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h1-small-screens) - $form-tick-box-size};
         }
 
         &.is-h2::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h2-small-screens) - $form-tick-box-size};
         }
 
         &.is-h3::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h3-small-screens) - $form-tick-box-size};
         }
 
         &.is-h4::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h4-small-screens) - $form-tick-box-size};
         }
 
         &.is-inline-label::before {
-          top: #{$sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::before {
-          top: #{$sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::before {
-          top: #{$sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::before {
-          top: #{$sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
 
@@ -104,46 +117,40 @@ $box-offsets-top: (
         &:not(.is-h4)::before,
         &:not(.is-muted-heading)::before,
         &:not(.is-inline-label)::before {
-          top: #{$sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h1) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h1) - $form-tick-box-size};
         }
 
         &.is-h2::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h2) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h2) - $form-tick-box-size};
         }
 
         &.is-h3::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h3) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h3) - $form-tick-box-size};
         }
 
         &.is-h4::before {
-          top: #{$sp-unit * map-get($box-offsets-top, h4) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, h4) - $form-tick-box-size};
         }
 
         &.is-inline-label::before {
-          top: #{$sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::before {
-          top: #{$sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::before {
-          top: #{$sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::before {
-          top: #{$sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$sp-unit * map-get($box-offsets-top, table-header) - $form-tick-box-size};
         }
-      }
-
-      // tick/circle
-      &::after {
-        content: '';
-        opacity: 0;
       }
 
       &.is-h1 {
@@ -202,7 +209,19 @@ $box-offsets-top: (
     }
   }
 
+  [type='checkbox'],
+  [type='radio'] {
+    label & {
+      // some basic styling for checkboxes inside labels
+      float: left;
+      margin: $spv-inner--x-small $sph-inner 0 0;
+      opacity: 1;
+      position: static;
+    }
+  }
+
   [type='checkbox'] {
+    @extend %vf-hidden-tick-input;
     @extend %vf-tick-elements;
 
     // stylelint-disable selector-no-qualifying-type
@@ -234,39 +253,39 @@ $box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h1-small-screens) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h2-small-screens) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h3-small-screens) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h4-small-screens) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
 
@@ -277,39 +296,39 @@ $box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h1) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h1) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h2) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h2) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h3) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h3) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h4) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, h4) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$tick-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
     }
@@ -321,9 +340,10 @@ $box-offsets-top: (
   }
 
   [type='radio'] {
+    @extend %vf-hidden-tick-input;
     @extend %vf-tick-elements;
     $inner-circle-diameter: 0.375rem;
-    $circle-offset-top: 0.5 * ($box-size - $inner-circle-diameter);
+    $circle-offset-top: 0.5 * ($form-tick-box-size - $inner-circle-diameter);
 
     // stylelint-disable selector-no-qualifying-type
     & + label {
@@ -335,8 +355,8 @@ $box-offsets-top: (
       &::after {
         border-radius: 50%;
         height: $inner-circle-diameter;
-        left: #{($box-size - $inner-circle-diameter) * 0.5};
-        // top: #{$box-offset-top + 0.5 * ($box-size - $inner-circle-diameter)};
+        left: #{($form-tick-box-size - $inner-circle-diameter) * 0.5};
+        // top: #{$box-offset-top + 0.5 * ($form-tick-box-size - $inner-circle-diameter)};
         width: $inner-circle-diameter;
       }
 
@@ -348,39 +368,39 @@ $box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h1-small-screens) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h1-small-screens) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h2-small-screens) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h2-small-screens) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h3-small-screens) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h3-small-screens) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h4-small-screens) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h4-small-screens) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
 
@@ -391,39 +411,39 @@ $box-offsets-top: (
         &:not(.is-h4)::after,
         &:not(.is-muted-heading)::after,
         &:not(.is-inline-label)::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, default-text) - $form-tick-box-size};
         }
 
         &.is-h1::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h1) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h1) - $form-tick-box-size};
         }
 
         &.is-h2::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h2) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h2) - $form-tick-box-size};
         }
 
         &.is-h3::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h3) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h3) - $form-tick-box-size};
         }
 
         &.is-h4::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h4) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, h4) - $form-tick-box-size};
         }
 
         &.is-inline-label::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, unpadded-text) - $form-tick-box-size};
         }
 
         &.is-muted-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-heading) - $form-tick-box-size};
         }
 
         &.is-muted-inline-heading::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, muted-inline-heading) - $form-tick-box-size};
         }
 
         &.is-table-header::after {
-          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $box-size};
+          top: #{$circle-offset-top + $sp-unit * map-get($box-offsets-top, table-header) - $form-tick-box-size};
         }
       }
     }
