--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -21,8 +21,8 @@ $box-offsets-top: (
 @mixin vf-b-tick-elements-definitions {
   %vf-hidden-tick-input {
     bottom: 0;
-    height: $form-tick-box-size;
     float: none;
+    height: $form-tick-box-size;
     margin: 0;
     opacity: 0;
     position: absolute;
@@ -53,6 +53,14 @@ $box-offsets-top: (
       opacity: 0;
     }
   }
+
+  %vf-tick-in-label {
+    // some basic styling for checkboxes inside labels
+    float: left;
+    margin: $spv-inner--x-small $sph-inner 0 0;
+    opacity: 1;
+    position: static;
+  }
 }
 
 @mixin vf-b-tick-elements {
@@ -60,6 +68,10 @@ $box-offsets-top: (
 
   // Default form checkbox and radio styles
   %vf-tick-elements {
+    label & {
+      @extend %vf-tick-in-label;
+    }
+
     & + label {
       @extend %vf-pseudo-tick-box;
 
@@ -209,17 +221,6 @@ $box-offsets-top: (
     }
   }
 
-  [type='checkbox'],
-  [type='radio'] {
-    label & {
-      // some basic styling for checkboxes inside labels
-      float: left;
-      margin: $spv-inner--x-small $sph-inner 0 0;
-      opacity: 1;
-      position: static;
-    }
-  }
-
   [type='checkbox'] {
     @extend %vf-hidden-tick-input;
     @extend %vf-tick-elements;
@@ -342,6 +343,7 @@ $box-offsets-top: (
   [type='radio'] {
     @extend %vf-hidden-tick-input;
     @extend %vf-tick-elements;
+
     $inner-circle-diameter: 0.375rem;
     $circle-offset-top: 0.5 * ($form-tick-box-size - $inner-circle-diameter);
 
