Remove duplicated ::after styling

--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -97,8 +97,7 @@ $box-offsets-top: (
   }
 
   %vf-pseudo-radio {
-    &::before,
-    &::after {
+    &::before {
       border-radius: 50%;
     }
 
