--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -2,6 +2,7 @@
 $form-tick-box-size: 1rem;
 $form-tick-height: 0.375rem;
 $form-tick-offset-top: 0.1875rem;
+$form-tick-box-nudge: 0.15rem; // to nudge the tick box a bit below baseline (to correctly align with default text size)
 
 $form-radio-inner-circle-diameter: 0.375rem;
 $form-radio-circle-offset: 0.5 * ($form-tick-box-size - $form-radio-inner-circle-diameter);
@@ -52,6 +53,7 @@ $box-offsets-top: (
       height: $form-tick-box-size;
       left: 0;
       outline-offset: 1px;
+      top: calc(#{$baseline-position} - #{$form-tick-box-size} + #{$form-tick-box-nudge});
       width: $form-tick-box-size;
     }
 
@@ -91,6 +93,7 @@ $box-offsets-top: (
       border-left: 2px solid;
       height: $form-tick-height;
       left: $form-tick-height * 0.5;
+      top: calc(#{$baseline-position} - #{$form-tick-box-size} + #{$form-tick-offset-top} + #{$form-tick-box-nudge});
       transform: rotate(-45deg);
       width: 0.625rem;
     }
@@ -105,7 +108,7 @@ $box-offsets-top: (
       border-radius: 50%;
       height: $form-radio-inner-circle-diameter;
       left: #{($form-tick-box-size - $form-radio-inner-circle-diameter) * 0.5};
-      // top: #{$box-offset-top + 0.5 * ($form-tick-box-size - $form-radio-inner-circle-diameter)};
+      top: calc(#{$baseline-position} - #{$form-tick-box-size} + #{$form-radio-circle-offset} + #{$form-tick-box-nudge});
       width: $form-radio-inner-circle-diameter;
     }
   }
