Fix submit buttons in the comparison example

--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -110,7 +110,7 @@
 </div>
 
 <div class="u-fixed-width">
-  <input class="p-button--positive" type="submit" />
+  <input class="p-button--positive" type="submit" value="Submit" />
 </div>
 
 <div class="row">
@@ -217,7 +217,7 @@
 </div>
 
 <div class="u-fixed-width">
-  <input class="p-button--positive" type="submit" />
+  <input class="p-button--positive" type="submit" value="Submit" />
 </div>
 
 </form>
