fix validator issue

--- a/templates/docs/examples/patterns/switch.html
+++ b/templates/docs/examples/patterns/switch.html
@@ -7,21 +7,21 @@
 <label>
     On
     <input type="checkbox" class="p-switch" checked />
-    <div class="p-switch__slider"></div>
+    <span class="p-switch__slider"></span>
 </label>
 <label>
     Off
     <input type="checkbox" class="p-switch" />
-    <div class="p-switch__slider"></div>
+    <span class="p-switch__slider"></span>
 </label>
 <label>
     On disabled
     <input type="checkbox" class="p-switch" checked disabled />
-    <div class="p-switch__slider"></div>
+    <span class="p-switch__slider"></span>
 </label>
 <label>
     Off disabled
     <input type="checkbox" class="p-switch" disabled />
-    <div class="p-switch__slider"></div>
+    <span class="p-switch__slider"></span>
 </label>
 {% endblock %}
