--- a/scss/_patterns_switch.scss
+++ b/scss/_patterns_switch.scss
@@ -31,6 +31,7 @@ $knob-size: $sp-unit * 3;
 
     background: linear-gradient(to right, $color-link 50%, $color-mid-light 50%);
     box-shadow: inset 0 2px 5px 0 transparentize($color-dark, 0.8);
+    display: block;
     height: $knob-size;
     margin: $spv-nudge-compensation 0 $spv-outer--small-scaleable 0;
     position: relative;
