correct markup in all instances of p-switch__slider

--- a/templates/_layouts/examples.html
+++ b/templates/_layouts/examples.html
@@ -55,7 +55,7 @@
         if (!inIframe()) {
           document.addEventListener('DOMContentLoaded', function() {
             var body = document.body;
-            var controls = fragmentFromString('<div class="u-baseline-grid__toggle"><label>Toggle baseline grid<input type="checkbox" class="p-switch js-baseline-toggle" /><div class="p-switch__slider"></div></label></div>');
+            var controls = fragmentFromString('<div class="u-baseline-grid__toggle"><label>Toggle baseline grid<input type="checkbox" class="p-switch js-baseline-toggle" /><span class="p-switch__slider"></span></label></div>');
             body.appendChild(controls);
 
             var toggle = document.querySelector('.js-baseline-toggle');
