--- a/templates/docs/examples/utilities/baseline-grid.html
+++ b/templates/docs/examples/utilities/baseline-grid.html
@@ -11,7 +11,7 @@
   <h6>Heading six</h6>
   <label>
     <input type="checkbox" class="p-switch" checked aria-controls="baseline" />
-    <div class="p-switch__slider"></div>
+    <span class="p-switch__slider"></span>
   </label>
 </div>
 <script>
