--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <div class="l-main">
+  <main class="l-main">
     <div class="p-panel">
       <div class="p-panel__header">
         <div class="u-fixed-width u-sv-2">
@@ -284,7 +284,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 
   <div class="l-aside is-pinned">
     <div class="p-panel--aside">
