address accessibility issues

--- a/scss/_patterns_breadcrumbs.scss
+++ b/scss/_patterns_breadcrumbs.scss
@@ -7,6 +7,11 @@
     margin: 0;
     padding: 0;
     width: 100%;
+
+    &__items {
+      margin-left: 0;
+      padding-left: 0;
+    }
   }
 
   .p-breadcrumbs__item {
