--- a/templates/docs/examples/patterns/breadcrumbs.html
+++ b/templates/docs/examples/patterns/breadcrumbs.html
@@ -4,12 +4,15 @@
 {% block standalone_css %}patterns_breadcrumbs{% endblock %}
 
 {% block content %}
-<ul class="p-breadcrumbs">
-  <li class="p-breadcrumbs__item">Overview</li>
-  <li class="p-breadcrumbs__item"><a href="#">Features</a></li>
-  <li class="p-breadcrumbs__item"><a href="#">Managed</a></li>
-  <li class="p-breadcrumbs__item"><a href="#">Install</a></li>
-  <li class="p-breadcrumbs__item"><a href="#">Partners</a></li>
-  <li class="p-breadcrumbs__item"><a href="#">Docs</a></li>
-</ul>
+<nav class="p-breadcrumbs">
+  <ol class="p-breadcrumbs__items">
+      <li class="p-breadcrumbs__item"><a href="#">Overview</a></li>
+      <li class="p-breadcrumbs__item"><a href="#">Features</a></li>
+      <li class="p-breadcrumbs__item"><a href="#">Managed</a></li>
+      <li class="p-breadcrumbs__item"><a href="#">Install</a></li>
+      <li class="p-breadcrumbs__item"><a href="#">Partners</a></li>
+      <li class="p-breadcrumbs__item">Docs</li>
+  </ol>
+</nav>
+
 {% endblock %}
