--- a/templates/docs/examples/patterns/search-box/navigation-dark.html
+++ b/templates/docs/examples/patterns/search-box/navigation-dark.html
@@ -19,12 +19,12 @@
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
-      <ul class="p-navigation__items" role="menu">
-        <li class="p-navigation__item" role="menuitem"><a class="p-navigation__link" href="#">Products</a></li>
-        <li class="p-navigation__item" role="menuitem"><a class="p-navigation__link" href="#">Services</a></li>
-        <li class="p-navigation__item" role="menuitem"><a class="p-navigation__link" href="#">Partners</a></li>
-        <li class="p-navigation__item" role="menuitem"><a class="p-navigation__link" href="#">About</a></li>
-        <li class="p-navigation__item" role="menuitem"><a class="p-navigation__link" href="#">Partners</a></li>
+      <ul class="p-navigation__items">
+        <li class="p-navigation__item"><a class="p-navigation__link" href="#">Products</a></li>
+        <li class="p-navigation__item"><a class="p-navigation__link" href="#">Services</a></li>
+        <li class="p-navigation__item"><a class="p-navigation__link" href="#">Partners</a></li>
+        <li class="p-navigation__item"><a class="p-navigation__link" href="#">About</a></li>
+        <li class="p-navigation__item"><a class="p-navigation__link" href="#">Partners</a></li>
       </ul>
       <form class="p-search-box is-dark">
         <input type="search" class="p-search-box__input" name="search" placeholder="Search" required>
