--- a/templates/docs/examples/templates/snapcraft-publicise.html
+++ b/templates/docs/examples/templates/snapcraft-publicise.html
@@ -38,42 +38,42 @@
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
-      <ul class="p-navigation__links" role="menu">
-        <li class="p-navigation__link " role="menuitem">
+      <ul class="p-navigation__links" >
+        <li class="p-navigation__link " >
           <a href="#store">
             Store
           </a>
         </li>
-        <li class="p-navigation__link " role="menuitem">
+        <li class="p-navigation__link " >
           <a href="#blog">
             Blog
           </a>
         </li>
-        <li class="p-navigation__link " role="menuitem">
+        <li class="p-navigation__link " >
           <a href="#iot">
             IoT
           </a>
         </li>
-        <li class="p-navigation__link " role="menuitem">
+        <li class="p-navigation__link " >
           <a href="#build">
             Build
           </a>
         </li>
-        <li class="p-navigation__link " role="menuitem">
+        <li class="p-navigation__link " >
           <a href="#docs/">
             Docs
           </a>
         </li>
-        <li class="p-navigation__link " role="menuitem">
+        <li class="p-navigation__link " >
           <a href="#tutorials">
             Tutorials
           </a>
         </li>
-        <li class="p-navigation__link" role="menuitem"><a class="p-link--external" href="#">Forum</a></li>
+        <li class="p-navigation__link" ><a class="p-link--external" href="#">Forum</a></li>
       </ul>
 
-      <ul class="p-navigation__links" role="menu">
-          <li class="p-navigation__link p-subnav" role="menuitem" id="link-1">
+      <ul class="p-navigation__links" >
+          <li class="p-navigation__link p-subnav"  id="link-1">
             <a class="p-subnav__toggle" aria-controls="account-menu" aria-expanded="false">
               Bartosz Szopka
             </a>
