--- a/templates/docs/examples/patterns/navigation/deprecated-dark.html
+++ b/templates/docs/examples/patterns/navigation/deprecated-dark.html
@@ -19,22 +19,22 @@
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
-      <ul class="p-navigation__links" role="menu">
-        <li class="p-navigation__link is-selected" role="menuitem">
+      <ul class="p-navigation__links" >
+        <li class="p-navigation__link is-selected" >
           <a href="#">Products</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a href="#">Services</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a href="#">Partners</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a href="#">About</a>
         </li>
       </ul>
-      <ul class="p-navigation__links" role="menu">
-        <li class="p-navigation__link p-subnav" role="menuitem" id="link-1">
+      <ul class="p-navigation__links" >
+        <li class="p-navigation__link p-subnav"  id="link-1">
           <a class="p-subnav__toggle" aria-controls="account-menu">
             My account
           </a>
