--- a/templates/docs/examples/patterns/navigation/full-width.html
+++ b/templates/docs/examples/patterns/navigation/full-width.html
@@ -19,17 +19,17 @@
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
-      <ul class="p-navigation__items" role="menu">
-        <li class="p-navigation__item is-selected" role="menuitem">
+      <ul class="p-navigation__items">
+        <li class="p-navigation__item is-selected" >
           <a class="p-navigation__link" href="#">Products</a>
         </li>
-        <li class="p-navigation__item" role="menuitem">
+        <li class="p-navigation__item">
           <a class="p-navigation__link" href="#">Services</a>
         </li>
-        <li class="p-navigation__item" role="menuitem">
+        <li class="p-navigation__item">
           <a class="p-navigation__link" href="#">Partners</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a class="p-navigation__link" href="#">About</a>
         </li>
       </ul>
