--- a/templates/docs/examples/templates/maas-layout.html
+++ b/templates/docs/examples/templates/maas-layout.html
@@ -17,28 +17,28 @@
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
-      <ul class="p-navigation__links" role="menu">
-        <li class="p-navigation__link is-selected" role="menuitem">
+      <ul class="p-navigation__links" >
+        <li class="p-navigation__link is-selected" >
           <a href="#">Hardware</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a href="#">Images</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a href="#">DNS</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a href="#">AZs</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a href="#">Subnets</a>
         </li>
-        <li class="p-navigation__link" role="menuitem">
+        <li class="p-navigation__link" >
           <a href="#">Settings</a>
         </li>
       </ul>
-      <ul class="p-navigation__links u-image-position--right" role="menu">
-        <li class="p-navigation__link" role="menuitem">
+      <ul class="p-navigation__links u-image-position--right" >
+        <li class="p-navigation__link" >
           <a href="#">Maria</a>
         </li>
       </ul>
