--- a/templates/docs/examples/templates/z-index.html
+++ b/templates/docs/examples/templates/z-index.html
@@ -14,8 +14,8 @@
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
-      <ul class="p-navigation__items" role="menu">
-        <li class="p-navigation__item p-subnav" role="menuitem" id="link-1">
+      <ul class="p-navigation__items">
+        <li class="p-navigation__item p-subnav"  id="link-1">
           <a href="#link-1-menu" aria-controls="link-1-menu" class="p-subnav__toggle p-navigation__link">LXC</a>
           <ul class="p-subnav__items" id="link-1-menu" aria-hidden="true">
             <li>
@@ -29,7 +29,7 @@
             </li>
           </ul>
         </li>
-        <li class="p-navigation__item p-subnav" role="menuitem" id="link-2">
+        <li class="p-navigation__item p-subnav"  id="link-2">
           <a href="#link-2-menu" aria-controls="link-2-menu" class="p-subnav__toggle p-navigation__link">LXD</a>
           <ul class="p-subnav__items" id="link-2-menu" aria-hidden="true">
             <li>
@@ -49,7 +49,7 @@
             </li>
           </ul>
         </li>
-        <li class="p-navigation__item p-subnav is-active" role="menuitem" id="link-3">
+        <li class="p-navigation__item p-subnav is-active"  id="link-3">
           <a href="#link-3-menu" aria-controls="link-3-menu" class="p-subnav__toggle p-navigation__link">LXCFS</a>
           <ul class="p-subnav__items" id="link-3-menu" aria-hidden="false">
             <li>
@@ -64,8 +64,8 @@
           </ul>
         </li>
       </ul>
-      <ul class="p-navigation__items" role="menu">
-        <li class="p-navigation__item p-subnav" role="menuitem" id="link-2">
+      <ul class="p-navigation__items">
+        <li class="p-navigation__item p-subnav"  id="link-2">
           <a class="p-subnav__toggle p-navigation__link" aria-controls="account-menu">
             My account
           </a>
