--- a/templates/docs/examples/patterns/breadcrumbs-deprecated.html
+++ b/templates/docs/examples/patterns/breadcrumbs-deprecated.html
@@ -1,5 +1,5 @@
 {% extends "_layouts/examples.html" %}
-{% block title %}Breadcrumbs - deprecated{% endblock %}
+{% block title %}Breadcrumbs / Deprecated{% endblock %}
 
 {% block standalone_css %}patterns_breadcrumbs{% endblock %}
 
