Add styling for an icon in the table cell

--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -40,6 +40,7 @@
 @import 'patterns_slider';
 @import 'patterns_strip';
 @import 'patterns_switch';
+@import 'patterns_table-icons';
 @import 'patterns_table-expanding';
 @import 'patterns_table-of-contents';
 @import 'patterns_table-mobile-card';
@@ -119,6 +120,7 @@
   @include vf-p-slider;
   @include vf-p-strip;
   @include vf-p-switch;
+  @include vf-p-table-icons;
   @include vf-p-table-expanding;
   @include vf-p-table-of-contents;
   @include vf-p-table-mobile-card;
