Remove alt attribs from all buttons

--- a/templates/docs/examples/patterns/search-box/navigation.html
+++ b/templates/docs/examples/patterns/search-box/navigation.html
@@ -28,8 +28,8 @@
       </ul>
       <form class="p-search-box">
         <input type="search" class="p-search-box__input" name="search" placeholder="Search" required>
-        <button type="reset" class="p-search-box__reset" alt="reset"><i class="p-icon--close"></i></button>
-        <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
+        <button type="reset" class="p-search-box__reset"><i class="p-icon--close"></i></button>
+        <button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button>
       </form>
     </nav>
   </div>
