--- a/templates/docs/examples/patterns/search-box/default-dark.html
+++ b/templates/docs/examples/patterns/search-box/default-dark.html
@@ -6,12 +6,12 @@
 {% block content %}
 <form class="p-search-box is-dark">
   <input type="search" class="p-search-box__input" name="search" placeholder="Search" required>
-  <button type="reset" class="p-search-box__reset" alt="reset"><i class="p-icon--close"></i></button>
-  <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
+  <button type="reset" class="p-search-box__reset"><i class="p-icon--close"></i></button>
+  <button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button>
 </form>
 <form class="p-search-box is-dark">
   <input type="search" class="p-search-box__input" name="search" placeholder="Search" required disabled>
-  <button type="reset" class="p-search-box__reset" alt="reset" disabled><i class="p-icon--close"></i></button>
-  <button type="submit" class="p-search-box__button" alt="search" disabled><i class="p-icon--search"></i></button>
+  <button type="reset" class="p-search-box__reset" disabled><i class="p-icon--close"></i></button>
+  <button type="submit" class="p-search-box__button" disabled><i class="p-icon--search"></i></button>
 </form>
 {% endblock %}
