--- a/templates/docs/examples/templates/maas-layout.html
+++ b/templates/docs/examples/templates/maas-layout.html
@@ -122,8 +122,8 @@
     <div class="col-9">
       <form class="p-search-box">
         <input type="search" class="p-search-box__input" name="search" placeholder="Search" required>
-        <button type="reset" class="p-search-box__reset" alt="reset"><i class="p-icon--close"></i></button>
-        <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
+        <button type="reset" class="p-search-box__reset"><i class="p-icon--close"></i></button>
+        <button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button>
       </form>
       <table aria-label="MAAS table example" class="p-table--mobile-card">
         <thead>
