add aria-labels to all nav elements

--- a/templates/docs/examples/index.html
+++ b/templates/docs/examples/index.html
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col-3">
       <h3>Base elements</h3>
-      <nav>
+      <nav aria-label="Documentation: base elements">
         <ul class="p-list">
           {% for example in examples.base %}
             <li class="p-list__item">
@@ -28,7 +28,7 @@
     </div>
     <div class="col-3">
       <h3>Components</h3>
-      <nav>
+      <nav aria-label="Documentation: components">
         <ul class="p-list">
           {% for example in examples.patterns %}
             <li class="p-list__item">
@@ -40,7 +40,7 @@
     </div>
     <div class="col-3">
       <h3>Utilities</h3>
-      <nav>
+      <nav aria-label="Documentation: utilities">
         <ul class="p-list">
           {% for example in examples.utilities %}
             <li class="p-list__item">
@@ -52,7 +52,7 @@
     </div>
     <div class="col-3">
       <h3>Layouts</h3>
-      <nav>
+      <nav aria-label="Documentation: layouts">
         <ul class="p-list">
           {% for example in examples.layouts %}
             <li class="p-list__item">
@@ -62,7 +62,7 @@
         </ul>
       </nav>
       <h3>Templates</h3>
-      <nav>
+      <nav aria-label="Documentation: templates">
         <ul class="p-list">
           {% for example in examples.templates %}
             <li class="p-list__item">
