--- a/templates/docs/examples/patterns/breadcrumbs.html
+++ b/templates/docs/examples/patterns/breadcrumbs.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}patterns_breadcrumbs{% endblock %}
 
 {% block content %}
-<nav class="p-breadcrumbs" aria-label="Breadcrumb">
+<nav class="p-breadcrumbs" aria-label="Breadcrumbs">
   <ol class="p-breadcrumbs__items">
       <li class="p-breadcrumbs__item"><a href="#">Overview</a></li>
       <li class="p-breadcrumbs__item"><a href="#">Features</a></li>
