--- a/templates/docs/examples/patterns/table-of-contents.html
+++ b/templates/docs/examples/patterns/table-of-contents.html
@@ -7,7 +7,7 @@
 <aside class="p-table-of-contents">
   <div class="p-table-of-contents__section">
     <h4 class="p-table-of-contents__header">CONTENTS</h4>
-    <nav class="p-table-of-contents__nav">
+    <nav class="p-table-of-contents__nav" aria-label="Table of contents">
       <ul class="p-list">
         <li><a class="p-table-of-contents__link" href="#link1">Install from snap</a></li>
         <li><a class="p-table-of-contents__link" href="#link2">Initialisation</a></li>
