--- a/templates/docs/examples/patterns/tabs.html
+++ b/templates/docs/examples/patterns/tabs.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}patterns_tabs{% endblock %}
 
 {% block content %}
-<nav class="p-tabs">
+<nav class="p-tabs" aria-label="Example tabs navigation">
   <ul class="p-tabs__list" role="tablist">
     <li class="p-tabs__item" role="presentation">
       <a href="#section1"
