--- a/templates/docs/examples/standalone.html
+++ b/templates/docs/examples/standalone.html
@@ -18,7 +18,7 @@
   <div class="row">
     <div class="col-3">
       <h3>Base elements</h3>
-      <nav>
+      <nav aria-label="Documentation: base elements">
         <ul class="p-list">
           {% for example in examples.base %}
             <li class="p-list__item">
@@ -30,7 +30,7 @@
     </div>
     <div class="col-3">
       <h3>Components</h3>
-      <nav>
+      <nav aria-label="Documentation: components">
         <ul class="p-list">
           {% for example in examples.patterns %}
             <li class="p-list__item">
