--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -29,7 +29,7 @@
       <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
     </div>
 
-    <nav class="p-navigation__nav">
+    <nav class="p-navigation__nav" aria-label="Example main navigation">
       <ul id="main-navigation" class="p-navigation__links u-clearfix">
         <li class="p-navigation__link"><a href="#install">Install</a></li>
         <li class="p-navigation__link"><a href="#how-it-works">How it works</a></li>
@@ -55,7 +55,7 @@
 <div class="p-strip is-shallow">
   <div class="row">
     <aside class="col-3">
-      <nav class="p-side-navigation" id="drawer">
+      <nav class="p-side-navigation" id="drawer" aria-label="Example side navigation">
         <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
           Toggle side navigation
         </button>
@@ -319,7 +319,7 @@
 </div>
 
 <footer class="p-strip">
-  <nav class="row">
+  <nav class="row" aria-label="Footer navigation">
     <div class="has-cookie">
       <p>© 2020 Canonical Ltd. <a href="#">Ubuntu</a> and <a href="#">Canonical</a> are registered trademarks of Canonical Ltd.</p>
       <ul class="p-inline-list--middot">
