--- a/templates/_layouts/_footer.html
+++ b/templates/_layouts/_footer.html
@@ -2,7 +2,7 @@
   <div class="row p-content__row">
     <div class="col-12">
       <p class="u-no-margin--bottom">&copy; {{ now("%Y") }} Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.</p>
-      <nav>
+      <nav aria-label="Footer navigation">
         <ul class="p-inline-list--middot u-no-margin--bottom">
           <li class="p-inline-list__item">
             <a class="p-link--external" href="https://github.com/canonical-web-and-design/vanilla-framework/releases/latest">Vanilla framework v{{ version }}</a>
