--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -21,7 +21,7 @@
       <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
       <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
     </div>
-    <nav class="p-navigation__nav">
+    <nav class="p-navigation__nav" aria-label="Main navigation">
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
@@ -50,7 +50,7 @@
 <div class="p-strip is-shallow">
   <div class="row">
     <aside class="col-3">
-      <nav class="p-side-navigation--raw-html" id="drawer">
+      <nav class="p-side-navigation--raw-html" id="drawer" aria-label="Table of contents">
         <a href="#drawer" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
           Toggle side navigation
         </a>
@@ -257,7 +257,7 @@
 </div>
 
 <footer class="p-strip--light">
-  <nav class="row">
+  <nav class="row" aria-label="Footer navigation">
     <div class="has-cookie">
       <p>© 2020 Canonical Ltd. <a href="#">Ubuntu</a> and <a href="#">Canonical</a> are registered trademarks of Canonical Ltd.</p>
       <ul class="p-inline-list--middot">
