--- a/templates/docs/examples/patterns/side-navigation/_default.html
+++ b/templates/docs/examples/patterns/side-navigation/_default.html
@@ -6,7 +6,7 @@
 
   <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
-  <nav class="p-side-navigation__drawer">
+  <nav class="p-side-navigation__drawer" aria-label="Example side navigation">
     <div class="p-side-navigation__drawer-header">
       <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
         Toggle side navigation
