--- a/templates/docs/examples/patterns/side-navigation/icons.html
+++ b/templates/docs/examples/patterns/side-navigation/icons.html
@@ -11,7 +11,7 @@
 
   <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
-  <nav class="p-side-navigation__drawer">
+  <nav class="p-side-navigation__drawer" aria-label="Example side navigation with icons">
     <div class="p-side-navigation__drawer-header">
       <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
         Toggle side navigation
