--- a/templates/docs/examples/templates/maas-docs.html
+++ b/templates/docs/examples/templates/maas-docs.html
@@ -103,7 +103,7 @@
       <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
     </div>
 
-    <nav class="p-navigation__nav">
+    <nav class="p-navigation__nav" aria-label="Example main navigation">
       <ul id="main-navigation" class="p-navigation__links u-clearfix">
         <li class="p-navigation__link"><a href="#install">Install</a></li>
         <li class="p-navigation__link"><a href="#how-it-works">How it works</a></li>
@@ -130,7 +130,7 @@
   </section>
   <div class="l-docs">
     <aside class="l-docs-sidebar" id="navigation">
-      <nav class="p-side-navigation">
+      <nav class="p-side-navigation" aria-label="Example main navigation">
         <ul class="p-side-navigation__list">
           <li class="p-side-navigation__item--title">
             <a class="p-side-navigation__link">Machines</a>
@@ -223,7 +223,7 @@
 </div>
 
 <footer class="p-strip">
-  <nav class="row">
+  <nav class="row" aria-label="Example footer navigation">
     <div class="has-cookie">
       <p>© 2020 Canonical Ltd. <a href="#">Ubuntu</a> and <a href="#">Canonical</a> are registered trademarks of Canonical Ltd.</p>
       <ul class="p-inline-list--middot">
