--- a/templates/docs/examples/templates/snapcraft-publicise.html
+++ b/templates/docs/examples/templates/snapcraft-publicise.html
@@ -36,7 +36,7 @@
       <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
       <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
     </div>
-    <nav class="p-navigation__nav">
+    <nav class="p-navigation__nav" aria-label="Example main navigation">
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
@@ -107,7 +107,7 @@
         my-awesome-snap
       </h1>
 
-      <nav class="p-tabs">
+      <nav class="p-tabs" aria-label="Example tabs navigation">
         <ul class="p-tabs__list u-float-right u-no-margin--bottom" role="tablist">
           <li class="p-tabs__item" role="presentation">
             <a data-tour="listing-intro" href="#listing" class="p-tabs__link" tabindex="0" role="tab">
@@ -147,7 +147,7 @@
   <div class="p-strip is-shallow">
     <div class="row">
       <div class="col-3">
-        <nav class="p-side-navigation">
+        <nav class="p-side-navigation" aria-label="Example side navigation">
           <ul class="p-side-navigation__list">
             <li class="p-side-navigation__item">
               <a class="p-side-navigation__link" aria-current="page" href="#publicise">Snap Store buttons</a>
