--- a/templates/docs/examples/templates/z-index.html
+++ b/templates/docs/examples/templates/z-index.html
@@ -10,7 +10,7 @@
       <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
       <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
     </div>
-    <nav class="p-navigation__nav">
+    <nav class="p-navigation__nav" aria-label="Example main navigation">
       <span class="u-off-screen">
         <a href="#main-content">Jump to main content</a>
       </span>
@@ -135,7 +135,7 @@
     vel eu.
   </p>
 
-  <nav class="p-tabs">
+  <nav class="p-tabs" aria-label="Example tabs navigation">
     <ul class="p-tabs__list" role="tablist">
       <li class="p-tabs__item" role="presentation">
         <a href="#section1" class="p-tabs__link" tabindex="0" role="tab" aria-controls="section1" aria-selected="true">Machine summary</a>
