reformat flask tags

--- a/templates/docs/examples/patterns/slider/slider-input.html
+++ b/templates/docs/examples/patterns/slider/slider-input.html
@@ -1,4 +1,9 @@
-{% extends "_layouts/examples.html" %} {% block title %}Slider / Input{% endblock %} {% block standalone_css %}patterns_slider{% endblock %} {% block content %} <div class="p-slider__wrapper">
+{% extends "_layouts/examples.html" %}
+{% block title %}Slider / Input{% endblock %}
+{% block standalone_css %}patterns_slider{% endblock %}
+{% block content %}
+
+<div class="p-slider__wrapper">
   <input class="p-slider"
     type="range"
     aria-value-min="0"
