add labels to tick elements

--- a/templates/docs/examples/patterns/forms/_checkbox-inline.html
+++ b/templates/docs/examples/patterns/forms/_checkbox-inline.html
@@ -1,6 +1,6 @@
 <p>
-  <label class="p-checkbox--inline">
-    <input type="checkbox" class="p-checkbox__input" />
+  <label class="p-checkbox--inline" for="checkbox1">
+    <input type="checkbox" class="p-checkbox__input" id="checkbox1"/>
     <span class="p-checkbox__label">.p-checkbox--inline</span>
   </label>
   alonside some text
@@ -10,8 +10,8 @@
   <thead>
     <tr>
       <th>
-        <label class="p-checkbox--inline">
-          <input type="checkbox" class="p-checkbox__input" />
+        <label class="p-checkbox--inline" for="checkbox2">
+          <input type="checkbox" class="p-checkbox__input" id="checkbox2"/>
           <span class="p-checkbox__label">.p-checkbox--inline in TH</span>
         </label>
       </th>
@@ -23,8 +23,8 @@
   <tbody>
     <tr>
       <td>
-        <label class="p-checkbox--inline">
-          <input type="checkbox" class="p-checkbox__input" />
+        <label class="p-checkbox--inline" for="checkbox2">
+          <input type="checkbox" class="p-checkbox__input" id="checkbox2"/>
           <span class="p-checkbox__label">.p-checkbox--inline in TD</span>
         </label>
       </td>
