--- a/templates/docs/examples/patterns/forms/_checkbox.html
+++ b/templates/docs/examples/patterns/forms/_checkbox.html
@@ -1,19 +1,19 @@
 <label class="p-checkbox">
-  <input type="checkbox" class="p-checkbox__input" />
-  <span class="p-checkbox__label">.p-checkbox</span>
+  <input type="checkbox" aria-labelledby="checkboxLabel1" class="p-checkbox__input">
+  <span class="p-checkbox__label" id="checkboxLabel1">.p-checkbox</span>
 </label>
 
 <label class="p-checkbox">
-  <input type="checkbox" class="p-checkbox__input" />
-  <span class="p-checkbox__label">checked</span>
+  <input type="checkbox" aria-labelledby="checkboxLabel2" class="p-checkbox__input">
+  <span class="p-checkbox__label" id="checkboxLabel2">checked</span>
 </label>
 
 <label class="p-checkbox">
-  <input type="checkbox" class="p-checkbox__input" disabled/>
-  <span class="p-checkbox__label">disabled</span>
+  <input type="checkbox" aria-labelledby="checkboxLabel2" class="p-checkbox__input" disabled>
+  <span class="p-checkbox__label" id="checkboxLabel2">disabled</span>
 </label>
 
 <label class="p-checkbox is-required">
-  <input type="checkbox" required class="p-checkbox__input">
-  <span class="p-checkbox__label">is-required</span>
+  <input type="checkbox" aria-labelledby="checkboxLabel3" required class="p-checkbox__input">
+  <span class="p-checkbox__label" id="checkboxLabel3">is-required</span>
 </label>
