--- a/templates/docs/examples/patterns/forms/_radio-heading.html
+++ b/templates/docs/examples/patterns/forms/_radio-heading.html
@@ -1,27 +1,27 @@
 <h1>
   <label class="p-radio--heading">
-    <input type="radio" class="p-radio__input" name="radioPattern" />
-    <span class="p-radio__label">.p-radio--heading</span>
+    <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioExample1"/>
+    <span class="p-radio__label" id="radioExample1">.p-radio--heading</span>
   </label>
 </h1>
 
 <h2>
   <label class="p-radio--heading">
-    <input type="radio" class="p-radio__input" name="radioPattern" />
-    <span class="p-radio__label">.p-radio--heading</span>
+    <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioExample2"/>
+    <span class="p-radio__label" id="radioExample2">.p-radio--heading</span>
   </label>
 </h2>
 
 <h3>
   <label class="p-radio--heading">
-    <input type="radio" class="p-radio__input" name="radioPattern" />
-    <span class="p-radio__label">.p-radio--heading</span>
+    <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioExample2"/>
+    <span class="p-radio__label" id="radioExample2">.p-radio--heading</span>
   </label>
 </h3>
 
 <h4>
   <label class="p-radio--heading">
-    <input type="radio" class="p-radio__input" name="radioPattern" />
-    <span class="p-radio__label">.p-radio--heading</span>
+    <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioExample3"/>
+    <span class="p-radio__label" id="radioExample3">.p-radio--heading</span>
   </label>
 </h4>
