--- a/templates/docs/examples/patterns/forms/_radio.html
+++ b/templates/docs/examples/patterns/forms/_radio.html
@@ -1,19 +1,19 @@
 <label class="p-radio">
-  <input type="radio"  class="p-radio__input" name="radioPattern" />
-  <span class="p-radio__label" for="radioExamplePattern">.p-radio</span>
+  <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioExample1">
+  <span class="p-radio__label" id="radioExample1">.p-radio</span>
 </label>
 
 <label class="p-radio">
-  <input type="radio"  class="p-radio__input" name="radioPattern" checked />
-  <span class="p-radio__label" for="radioExamplePattern">checked</span>
+  <input type="radio" class="p-radio__input" name="radioPattern" checked aria-labelledby="radioExample2">
+  <span class="p-radio__label" id="radioExample2">checked</span>
 </label>
 
 <label class="p-radio">
-  <input type="radio"  class="p-radio__input" name="radioPattern" disabled />
-  <span class="p-radio__label" for="radioExamplePattern">disabled</span>
+  <input type="radio" class="p-radio__input" name="radioPattern" disabled aria-labelledby="radioExample3">
+  <span class="p-radio__label" id="radioExample3">disabled</span>
 </label>
 
 <label class="p-radio is-required">
-  <input type="radio"  class="p-radio__input" name="radioPattern" required />
-  <span class="p-radio__label" for="radioExamplePattern">is-required</span>
+  <input type="radio" class="p-radio__input" name="radioPattern" required aria-labelledby="radioExample4">
+  <span class="p-radio__label" id="radioExample4">is-required</span>
 </label>
