--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -91,16 +91,16 @@
 
     <p class="p-muted-heading">
       <label class="p-checkbox--inline">
-        <input type="checkbox" class="p-checkbox__input" />
-        <span class="p-checkbox__label">.p-checkbox--inline in .p-muted-heading</span>
+        <input type="checkbox" class="p-checkbox__input" aria-labelledby="checkboxLabel1"/>
+        <span class="p-checkbox__label" id="checkboxLabel1">.p-checkbox--inline in .p-muted-heading</span>
       </label>
     </p>
 
     <p>
       <span class="p-muted-heading">
         <label class="p-checkbox--inline">
-          <input type="checkbox" class="p-checkbox__input" />
-          <span class="p-checkbox__label">.p-checkbox--inline in .p-muted-heading</span>
+          <input type="checkbox" class="p-checkbox__input" aria-labelledby="checkboxLabel2"/>
+          <span class="p-checkbox__label" id="checkboxLabel2">.p-checkbox--inline in .p-muted-heading</span>
         </label>
       </span>
       alongside text
@@ -198,16 +198,16 @@
 
     <p class="p-muted-heading">
       <label class="p-radio--inline">
-        <input type="radio" class="p-radio__input" name="radioPattern" />
-        <span class="p-radio__label">.p-radio--inline in .p-muted-heading</span>
+        <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioLabel1"/>
+        <span class="p-radio__label" id="radioLabel1">.p-radio--inline in .p-muted-heading</span>
       </label>
     </p>
 
     <p>
       <span class="p-muted-heading">
         <label class="p-radio--inline">
-          <input type="radio" class="p-radio__input" name="radioPattern" />
-          <span class="p-radio__label">.p-radio--inline in .p-muted-heading</span>
+          <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioLabel2"/>
+          <span class="p-radio__label" id="radioLabel2">.p-radio--inline in .p-muted-heading</span>
         </label>
       </span>
       alongside text
@@ -217,7 +217,7 @@
 </div>
 
 <div class="u-fixed-width">
-  <input class="p-button--positive" type="submit" value="Submit" />
+  <input class="p-button--positive" type="submit" value="Submit" aria-label="Submit"/>
 </div>
 
 </form>
