--- a/templates/docs/examples/templates/tick-element-comparison.html
+++ b/templates/docs/examples/templates/tick-element-comparison.html
@@ -43,8 +43,8 @@
         </form>
       </div>
       <div class="col-3">
-        <input type="checkbox" id="checkExample2">
-        <label for="checkExample2">Checkbox option 2</label>
+        <input type="checkbox" id="checkExample2a">
+        <label for="checkExample2a">Checkbox option 2</label>
         <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
         <label for="Radio1">Radio option 1</label>
         <input type="radio" name="RadioOptions" id="Radio2" value="option2">
