--- a/templates/docs/examples/utilities/baseline-grid.html
+++ b/templates/docs/examples/utilities/baseline-grid.html
@@ -9,8 +9,9 @@
   <h4>Heading four</h4>
   <h5>Heading five</h5>
   <h6>Heading six</h6>
-  <label>
-    <input type="checkbox" class="p-switch" checked aria-controls="baseline" />
+  <label for="baselineGridToggle">
+    Toggle baseline grid
+    <input type="checkbox" id="baselineGridToggle" class="p-switch" checked aria-controls="baseline" aria-label="" />
     <span class="p-switch__slider"></span>
   </label>
 </div>
