--- a/templates/_layouts/examples.html
+++ b/templates/_layouts/examples.html
@@ -57,7 +57,7 @@
         if (!inIframe()) {
           document.addEventListener('DOMContentLoaded', function() {
             var body = document.body;
-            var controls = fragmentFromString('<div class="u-baseline-grid__toggle"><label>Toggle baseline grid<input type="checkbox" class="p-switch js-baseline-toggle" /><span class="p-switch__slider"></span></label></div>');
+            var controls = fragmentFromString('<div class="u-baseline-grid__toggle"><label for="baseline-grid-toggle">Toggle baseline grid<input type="checkbox" class="p-switch js-baseline-toggle" id="baseline-grid-toggle"/><span class="p-switch__slider"></span></label></div>');
             body.appendChild(controls);
 
             var toggle = document.querySelector('.js-baseline-toggle');
