--- a/templates/docs/examples/patterns/switch.html
+++ b/templates/docs/examples/patterns/switch.html
@@ -4,24 +4,24 @@
 {% block standalone_css %}patterns_switch{% endblock %}
 
 {% block content %}
-<label>
+<label for="checkbox1">
     On
-    <input type="checkbox" class="p-switch" checked />
+    <input type="checkbox" class="p-switch" id="checkbox1" checked/>
     <span class="p-switch__slider"></span>
 </label>
-<label>
+<label for="checkbox2">
     Off
-    <input type="checkbox" class="p-switch" />
+    <input type="checkbox" class="p-switch"  id="checkbox2"/>
     <span class="p-switch__slider"></span>
 </label>
-<label>
+<label for="checkbox3">
     On disabled
-    <input type="checkbox" class="p-switch" checked disabled />
+    <input type="checkbox" class="p-switch"  id="checkbox3" checked disabled/>
     <span class="p-switch__slider"></span>
 </label>
-<label>
+<label for="checkbox4">
     Off disabled
-    <input type="checkbox" class="p-switch" disabled />
+    <input type="checkbox" class="p-switch"  id="checkbox4" disabled/>
     <span class="p-switch__slider"></span>
 </label>
 {% endblock %}
