remove obsolete frameborder attrib

--- a/templates/docs/examples/utilities/embedded-media.html
+++ b/templates/docs/examples/utilities/embedded-media.html
@@ -5,6 +5,6 @@
 <div class="u-embedded-media">
   <iframe title="Title of the media object" class="u-embedded-media__element"
   src="https://www.youtube.com/embed/TShKZLeZzWE"
-  frameborder="0" allowfullscreen></iframe>
+  allowfullscreen></iframe>
 </div>
 {% endblock %}
