address feedback, make ids unique

--- a/templates/docs/examples/patterns/forms/_checkbox-heading.html
+++ b/templates/docs/examples/patterns/forms/_checkbox-heading.html
@@ -1,27 +1,27 @@
 <h1>
-  <label class="p-checkbox--heading" for="checkbox1">
-    <input type="checkbox" class="p-checkbox__input" id="checkbox1"/>
-    <span class="p-checkbox__label">.p-checkbox--heading</span>
+  <label class="p-checkbox--heading">
+    <input type="checkbox" class="p-checkbox__input" aria-labelledby="headingCheckbox1label"/>
+    <span class="p-checkbox__label" id="headingCheckbox1label">.p-checkbox--heading</span>
   </label>
 </h1>
 
 <h2>
-  <label class="p-checkbox--heading" for="checkbox2">
-    <input type="checkbox" class="p-checkbox__input" id="checkbox2"/>
-    <span class="p-checkbox__label">.p-checkbox--heading</span>
+  <label class="p-checkbox--heading">
+    <input type="checkbox" class="p-checkbox__input" aria-labelledby="headingCheckbox2label"/>
+    <span class="p-checkbox__label" id="headingCheckbox2label">.p-checkbox--heading</span>
   </label>
 </h2>
 
 <h3>
-  <label class="p-checkbox--heading" for="checkbox2">
-    <input type="checkbox" class="p-checkbox__input" id="checkbox2"/>
-    <span class="p-checkbox__label">.p-checkbox--heading</span>
+  <label class="p-checkbox--heading">
+    <input type="checkbox" class="p-checkbox__input" aria-labelledby="headingCheckbox3label"/>
+    <span class="p-checkbox__label" id="headingCheckbox3label">.p-checkbox--heading</span>
   </label>
 </h3>
 
 <h4>
-  <label class="p-checkbox--heading" for="checkbox3">
-    <input type="checkbox" class="p-checkbox__input" id="checkbox3"/>
-    <span class="p-checkbox__label">.p-checkbox--heading</span>
+  <label class="p-checkbox--heading">
+    <input type="checkbox" class="p-checkbox__input" aria-labelledby="headingCheckbox4label"/>
+    <span class="p-checkbox__label" id="headingCheckbox4label">.p-checkbox--heading</span>
   </label>
 </h4>
