--- a/templates/docs/examples/patterns/forms/_checkbox-inline.html
+++ b/templates/docs/examples/patterns/forms/_checkbox-inline.html
@@ -1,7 +1,7 @@
 <p>
-  <label class="p-checkbox--inline" for="checkbox1">
-    <input type="checkbox" class="p-checkbox__input" id="checkbox1"/>
-    <span class="p-checkbox__label">.p-checkbox--inline</span>
+  <label class="p-checkbox--inline">
+    <input type="checkbox" class="p-checkbox__input" aria-labelledby="inlineCheckbox1label"/>
+    <span class="p-checkbox__label" id="inlineCheckbox1label">.p-checkbox--inline</span>
   </label>
   alonside some text
 </p>
@@ -10,9 +10,9 @@
   <thead>
     <tr>
       <th>
-        <label class="p-checkbox--inline" for="checkbox2">
-          <input type="checkbox" class="p-checkbox__input" id="checkbox2"/>
-          <span class="p-checkbox__label">.p-checkbox--inline in TH</span>
+        <label class="p-checkbox--inline">
+          <input type="checkbox" class="p-checkbox__input" aria-labelledby="inlineCheckbox2label"/>
+          <span class="p-checkbox__label" id="inlineCheckbox2label">.p-checkbox--inline in TH</span>
         </label>
       </th>
       <th>
@@ -23,9 +23,9 @@
   <tbody>
     <tr>
       <td>
-        <label class="p-checkbox--inline" for="checkbox2">
-          <input type="checkbox" class="p-checkbox__input" id="checkbox2"/>
-          <span class="p-checkbox__label">.p-checkbox--inline in TD</span>
+        <label class="p-checkbox--inline">
+          <input type="checkbox" class="p-checkbox__input" aria-labelledby="inlineCheckbox3label"/>
+          <span class="p-checkbox__label" id="inlineCheckbox3label">.p-checkbox--inline in TD</span>
         </label>
       </td>
       <td>
