--- a/templates/docs/examples/patterns/forms/_radio-inline.html
+++ b/templates/docs/examples/patterns/forms/_radio-inline.html
@@ -1,7 +1,7 @@
 <p>
   <label class="p-radio--inline">
-    <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioExample1"/>
-    <span class="p-radio__label" id="radioExample1">.p-radio--inline</span>
+    <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="inlineRadioExample1"/>
+    <span class="p-radio__label" id="inlineRadioExample1">.p-radio--inline</span>
   </label>
   alonside some text
 </p>
@@ -11,8 +11,8 @@
     <tr>
       <th>
         <label class="p-radio--inline">
-          <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioExample2"/>
-          <span class="p-radio__label" id="radioExample2">.p-radio--inline in th</span>
+          <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="inlineRadioExample2"/>
+          <span class="p-radio__label" id="inlineRadioExample2">.p-radio--inline in th</span>
         </label>
       </th>
       <th>
@@ -24,8 +24,8 @@
     <tr>
       <td>
         <label class="p-radio--inline">
-          <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="radioExample3"/>
-          <span class="p-radio__label" id="radioExample3">.p-radio--inline in td</span>
+          <input type="radio" class="p-radio__input" name="radioPattern" aria-labelledby="inlineRadioExample3"/>
+          <span class="p-radio__label" id="inlineRadioExample3">.p-radio--inline in td</span>
         </label>
       </td>
       <td>
